--- a/NotSnek.csproj
+++ b/NotSnek.csproj
@@ -104,6 +104,7 @@
     <Compile Include="Assets\Scripts\Movement.cs" />
     <Compile Include="Assets\Scripts\Phoenix.cs" />
     <Compile Include="Assets\Scripts\PowerUp.cs" />
+    <Compile Include="Assets\Scripts\PreservableValues.cs" />
     <Compile Include="Assets\Scripts\SkeletonPart.cs" />
     <Compile Include="Assets\Scripts\TimeOfDayComponents.cs" />
     <Compile Include="Assets\Scripts\ZigzagPathCreator.cs" />
