--- a/NotSnek.csproj
+++ b/NotSnek.csproj
@@ -103,6 +103,8 @@
     <Compile Include="Assets\Scripts\MoveOnPath.cs" />
     <Compile Include="Assets\Scripts\Movement.cs" />
     <Compile Include="Assets\Scripts\Phoenix.cs" />
+    <Compile Include="Assets\Scripts\PopupController.cs" />
+    <Compile Include="Assets\Scripts\PopupText.cs" />
     <Compile Include="Assets\Scripts\PowerUp.cs" />
     <Compile Include="Assets\Scripts\PreservableValues.cs" />
     <Compile Include="Assets\Scripts\SkeletonPart.cs" />
