--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -71,6 +71,10 @@
      <Compile Include="Assets\Scripts\MoveOnPath.cs" />
      <Compile Include="Assets\Scripts\Movement.cs" />
      <Compile Include="Assets\Scripts\Phoenix.cs" />
+     <Compile Include="Assets\Scripts\PlayBounce.cs" />
+     <Compile Include="Assets\Scripts\PlayShake.cs" />
+     <Compile Include="Assets\Scripts\PopupController.cs" />
+     <Compile Include="Assets\Scripts\PopupText.cs" />
      <Compile Include="Assets\Scripts\PowerUp.cs" />
      <Compile Include="Assets\Scripts\PreservableValues.cs" />
      <Compile Include="Assets\Scripts\SkeletonPart.cs" />
