Your highscore is shown when the game ends. Still working on controller controlled pause.

--- a/NotSnek.csproj
+++ b/NotSnek.csproj
@@ -78,6 +78,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\EndTextController.cs" />
     <Compile Include="Assets\Scripts\BackgroundScroller.cs" />
     <Compile Include="Assets\Scripts\BodyPart.cs" />
     <Compile Include="Assets\Scripts\BulletEmitter.cs" />
@@ -102,8 +103,8 @@
     <Compile Include="Assets\Scripts\Fireball.cs" />
     <Compile Include="Assets\Scripts\Float.cs" />
     <Compile Include="Assets\Scripts\GameManager.cs" />
+    <Compile Include="Assets\Scripts\GetScore.cs" />
     <Compile Include="Assets\Scripts\MoveOnPath.cs" />
-    <Compile Include="Assets\Scripts\Movement.cs" />
     <Compile Include="Assets\Scripts\Pause.cs" />
     <Compile Include="Assets\Scripts\Phoenix.cs" />
     <Compile Include="Assets\Scripts\PlayBounce.cs" />
