Fixed bug where last boss would reappear. Also changed boss score values, since apparently 666666 * n is too much for Unity to handle.

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -73,6 +73,7 @@
      <Compile Include="Assets\Scripts\Float.cs" />
      <Compile Include="Assets\Scripts\GameManager.cs" />
      <Compile Include="Assets\Scripts\GetScore.cs" />
+     <Compile Include="Assets\Scripts\HighlightOnMouseOver.cs" />
      <Compile Include="Assets\Scripts\MoveOnPath.cs" />
      <Compile Include="Assets\Scripts\Pause.cs" />
      <Compile Include="Assets\Scripts\Phoenix.cs" />
